<?xml version="1.0" encoding="utf-8"?>
<resources xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Guilt Trip</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start_label">Start</string>
    <string name="stop_label">Stop</string>
    <string name="mode_text_label">Mode of Transport: </string>
    <string name="time_start_stop_text_label">Time: </string>
    <string name="distance_text_label">Distance Travelled: </string>
    <string name="footprint_text_label">Footprint: </string>
    <string name="advice_text_label">Advice: </string>
    
</resources>
